[package]
name = "orbit-digital-market"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "orbit_digital_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
product = {git = "https://github.com/bruh-capital/product"}
transaction = {git = "https://github.com/bruh-capital/transaction"}