[package]
name = "orbit-digital-market"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "orbit_digital_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
anchor-spl = "0.27.0"
orbit-product = {git = "https://github.com/OrbitEng/product", features = ["cpi"]}
orbit-transaction = {git = "https://github.com/OrbitEng/transaction", features = ["cpi"]}
market-accounts =  {git = "https://github.com/OrbitEng/accounts", features=["cpi"]}
orbit-multisig = {git = "https://github.com/OrbitEng/multisig", features=["no-entrypoint"]}
orbit-addresses = {git = "https://github.com/OrbitEng/addresses"}